Fix visibility, forum/faction rendering, event safety, and calculator rules

--- a/public/css/lorekeeper.css
+++ b/public/css/lorekeeper.css
@@ -81,6 +81,11 @@ body {
     margin-right: auto !important;
 }
 
+#gridView .img-thumbnail,
+.character-masterlist-thumbnail.img-thumbnail {
+    background-color: transparent;
+}
+
 /**************************************************************************************************
 
     Layout
